Make significant adjustments to the Moon Queen.